# biotest

./: .copier-answers.yml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Readme.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: doc.yml  format.yml  msrv.yml  test.yml
biotest/: all.html  fn.quality.html  fn.rand.html  fn.seeded_rand.html  fn.sequence.html  fn.text.html  index.html  sidebar-items.js
biotest/constants/: constant.ALPHABETS.html  constant.BIOTEST_VERSION.html  constant.CHROMOSOMES.html  constant.NUCLEOTIDES.html  constant.NUCLEOTIDES_LOWER.html  constant.NUCLEOTIDES_UPPER.html  constant.PHRED33.html  constant.PHRED64.html  constant.SEED.html  index.html  sidebar-items.js  static.ALPHABETS.html  static.BIOTEST_VERSION.html  static.CHROMOSOMES.html  static.CIGAR_GFF.html  static.CIGAR_SAM.html  static.GFF_FEATURE.html  static.GFF_PHASE.html  static.NUCLEOTIDES.html  static.NUCLEOTIDES_LOWER.html  static.NUCLEOTIDES_UPPER.html  static.PHRED33.html  static.PHRED64.html  static.SEED.html  static.STRAND.html  static.VCF_FORMAT_NUMBER.html  static.VCF_FORMAT_TYPE.html  static.VCF_INFO_NUMBER.html  static.VCF_INFO_TYPE.html  static.VCF_STRING_LENGTH.html
biotest/error/: enum.Error.html  index.html  type.Result.html
biotest/fasta/: enum.FastaBuilderError.html  index.html  sidebar-items.js  struct.Fasta.html  struct.FastaBuilder.html
biotest/fastq/: enum.FastqBuilderError.html  index.html  sidebar-items.js  struct.Fastq.html  struct.FastqBuilder.html
biotest/format/: index.html  sidebar-items.js  trait.Format.html
biotest/format/cigar/: index.html  sidebar-items.js  struct.Cigar.html
biotest/format/fasta/: enum.FastaBuilderError.html  index.html  sidebar-items.js  struct.Fasta.html  struct.FastaBuilder.html
biotest/format/fastq/: enum.FastqBuilderError.html  index.html  sidebar-items.js  struct.Fastq.html  struct.FastqBuilder.html
biotest/format/gff/: index.html  sidebar-items.js  struct.Gff.html
biotest/format/quality/: enum.QualityBuilderError.html  index.html  sidebar-items.js  struct.Quality.html  struct.QualityBuilder.html
biotest/format/sequence/: enum.SequenceBuilderError.html  index.html  sidebar-items.js  struct.Sequence.html  struct.SequenceBuilder.html
biotest/format/vcf/: enum.VcfBuilderError.html  fn.create.html  fn.records.html  index.html  sidebar-items.js  struct.Vcf.html  struct.VcfBuilder.html
biotest/values/: enum.Alphabet.html  enum.Chromosomes.html  enum.Cigar.html  enum.Dna.html  enum.Float.html  enum.GffFeature.html  enum.GffPhase.html  enum.Integer.html  enum.Nucleotides.html  enum.Quality.html  enum.Rna.html  enum.Strand.html  enum.VcfFormatNumber.html  enum.VcfFormatType.html  enum.VcfInfoNumber.html  enum.VcfInfoType.html  index.html  sidebar-items.js  trait.Generate.html  trait.Get.html  trait.Random.html
biotest/vcf/: enum.VcfBuilderError.html  fn.create.html  fn.records.html  index.html  sidebar-items.js  struct.Vcf.html  struct.VcfBuilder.html
biotest/vcf/header/: enum.HeaderBuilderError.html  fn.write.html  index.html  struct.Header.html  struct.HeaderBuilder.html
biotest/vcf/record/: enum.RecordBuilderError.html  index.html  struct.Record.html  struct.RecordBuilder.html
biotest_derive/: Cargo.toml
biotest_derive/src/: lib.rs
examples/: biotest.rs  default.rs
search.desc/biotest/: biotest-desc-0-.js
src/: constants.rs  error.rs  format.rs  lib.rs  values.rs
src/biotest/: constants.rs.html  error.rs.html  format.rs.html  lib.rs.html  values.rs.html
src/biotest/format/: cigar.rs.html  fasta.rs.html  fastq.rs.html  gff.rs.html  quality.rs.html  sequence.rs.html  vcf.rs.html
src/format/: cigar.rs  fasta.rs  fastq.rs  gff.rs  quality.rs  sequence.rs  vcf.rs
src/format/vcf/: header.rs  record.rs
trait.impl/biotest/values/: trait.Get.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/convert/: trait.AsRef.js  trait.From.js  trait.Into.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
(+20 files in other folders)
