[package]
name = "biotest"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Generate random test data for bioinformatics"
rust-version = "1.74"

homepage = "https://github.com/natir/biotest"
repository = "https://github.com/natir/biotest"
documentation = "https://natir.github.io/biotest/biotest"

readme = "Readme.md"
license-file = "LICENSE"


[features]
fasta    = []
fastq    = []
quality  = []
sequence = []
vcf      = []


[dependencies]
rand           = { version = "0.8" }
derive_builder = { version = "0.20" }

# Error management
thiserror      = { version = "1" }

# Logging and error management
log            = { version = "0.4" }


[dev-dependencies]
# Test
tempfile       = { version = "3" }
assert_matches = { version = "1" }

# Examples
clap           = { version = "4", features = ["derive"] }
stderrlog      = { version = "0.6" }

[[example]]
name = "default"
required-features = ["fasta", "fastq", "vcf", "sequence", "quality"]

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true