[package]
name = "biotest_derive"
version = "0.1.0"
edition = "2021"

description = "Proc macro crate of biotest crate"
rust-version = "1.63"

readme = "../Readme.md"
license-file = "../LICENSE"

[lib]
proc_macro = true

[dependencies]
# Proc macro
proc-macro2    = { version = "1" }
syn            = { version = "2", features = ["full"] }
quote          = { version = "1" }
